syntax = "proto3";
package management;

message RoleScope {
	string client_id = 1;
	string scope_name = 2;
}
